# lyric-lang

./: .gitignore  LICENSE  README.md  build-deb.sh  pyproject.toml
lyric/: __init__.py  ast_nodes.py  cli.py  compiled_runtime.py  compiler.py  errors.py  interpreter.py  lexer.py  parser.py  pyproxy.py  runtime.py
lyric/lib/lyric/: lyric.ly  math.ly
lyric/tests/: __init__.py
lyric/tests/core-0.1.0/: test_ast_nodes.py  test_cli.py  test_cli_integration.py  test_imports.py  test_interpreter.py  test_lexer.py  test_parser.py
lyric/tests/core-0.2.0/: test_boolean_operations.py  test_builtins_integration.py  test_class_interpretation.py  test_class_parsing.py  test_error_reporting.py  test_nested_control_flow.py  test_runtime.py
lyric/tests/core-0.3.0/: test_class_enhancements.py  test_class_init_tests.py  test_data_structures.py  test_exception_handling.py  test_exception_tests.py  test_list_dict_tests.py  test_runtime_enhancements.py  test_runtime_safety.py  test_type_declarations.py  test_type_tests.py  test_typed_parameters.py
lyric/tests/core-0.3.4/: __init__.py  test_importpy_integration.py  test_pyobject_integration.py
lyric/tests/core-0.4.0/: __init__.py  test_class_syntax_simplification.py  test_control_structure_syntax_simplification.py  test_multi_variable_declarations.py
lyric/tests/core-0.5.0/: __init__.py  test_bin_type.py  test_god_type.py  test_rex_type.py
lyric/tests/core-0.6.0/: __init__.py  test_break_continue.py  test_constructor_recognition.py  (+5 more)
lyric_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+89 files in other folders)
